<resources>
    <string name="app_name">ExamTest</string>
    <string name="theory">Теория</string>
    <string name="tables_and_diagrams">Таблицы и схемы</string>
    <string name="terms">Термины</string>
    <string name="basic_formulas">Основные формулы</string>
    <string name="tasks_by_topic">Задания по темам</string>
    <string name="blitz_test">Блиц тест</string>
    <string name="OGE_test_b">Тест ОГЭ #Б</string>
    <string name="OGE_test_p">Тест ОГЭ #П</string>
    <string name="point_calculator">Калькулятор баллов</string>
    <string name="username">Имя пользователя</string>
    <string name="password">Пароль</string>
    <string name="auth">Войти</string>
    <string name="register">Зарегистрироваться</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="authirization">Авторизация</string>
    <string name="term">Термин</string>
    <string name="title">Название</string>
    <string name="description">Описание</string>
    <string name="formula">Формула</string>
    <string name="tables">Таблицы</string>
    <string name="diagrams">Схемы</string>
    <string name="task">Задание</string>
    <string name="video">Видео</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
