<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.admin.AdminActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        app:title="Добавить" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/blitz_test"
            android:textSize="15sp"
            android:textStyle="bold"
            android:theme="@style/Theme.DefaultButtonStyle"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/basic_formulas"
            android:textSize="15sp"
            android:textStyle="bold"
            android:theme="@style/Theme.DefaultButtonStyle"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/button10"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/point_calculator"
            android:textSize="15sp"
            android:textStyle="bold"
            android:theme="@style/Theme.DefaultButtonStyle"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/tables_and_diagrams"
            android:textSize="15sp"
            android:textStyle="bold"
            android:theme="@style/Theme.DefaultButtonStyle"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/button9"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/OGE_test_p"
            android:textSize="15sp"
            android:textStyle="bold"
            android:theme="@style/Theme.DefaultButtonStyle"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/button8"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/OGE_test_b"
            android:textSize="15sp"
            android:textStyle="bold"
            android:theme="@style/Theme.DefaultButtonStyle"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/terms"
            android:textSize="15sp"
            android:textStyle="bold"
            android:theme="@style/Theme.DefaultButtonStyle"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/theory"
            android:textSize="15sp"
            android:textStyle="bold"
            android:theme="@style/Theme.DefaultButtonStyle"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/tasks_by_topic"
            android:textSize="15sp"
            android:textStyle="bold"
            android:theme="@style/Theme.DefaultButtonStyle"
            app:cornerRadius="10dp" />
    </LinearLayout>

</LinearLayout>